feat(content): upgrade routing-geospatial and core-banking series to 2027 SOTA masterclass standard